// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issues Similar View renders initially with loading component 1`] = `
<div>
  <div
    className="alert alert-block alert-warning"
  >
    <strong>
      Warning
      :
    </strong>
     
    This is an experimental feature. Data may not be immediately available while we process the unmerge.
  </div>
  <LoadingIndicator />
</div>
`;

exports[`Issues Similar View renders with mocked data 1`] = `
<GroupGroupingView
  location={Object {}}
  params={
    Object {
      "groupId": "groupId",
      "orgId": "orgId",
      "projectId": "projectId",
    }
  }
>
  <div>
    <div
      className="alert alert-block alert-warning"
    >
      <strong>
        Warning
        :
      </strong>
       
      This is an experimental feature. Data may not be immediately available while we process the unmerge.
    </div>
    <LoadingIndicator>
      <div
        className="loading"
      >
        <div
          className="loading-indicator"
        />
        <div
          className="loading-message"
        />
      </div>
    </LoadingIndicator>
  </div>
</GroupGroupingView>
`;

exports[`Issues Similar View renders with mocked data 2`] = `
<GroupGroupingView
  location={Object {}}
  params={
    Object {
      "groupId": "groupId",
      "orgId": "orgId",
      "projectId": "projectId",
    }
  }
>
  <div>
    <div
      className="alert alert-block alert-warning"
    >
      <strong>
        Warning
        :
      </strong>
       
      This is an experimental feature. Data may not be immediately available while we process the unmerge.
    </div>
    <LoadingIndicator>
      <div
        className="loading"
      >
        <div
          className="loading-indicator"
        />
        <div
          className="loading-message"
        />
      </div>
    </LoadingIndicator>
  </div>
</GroupGroupingView>
`;
